# python-translo

./: README.md  pyproject.toml  requirements.txt  setup.py  test.py
PyTranslo/: __init__.py  api.py
